[gd_scene format=3 uid="uid://c271w4gngd6d"]

[ext_resource type="Script" uid="uid://8nng28shbs30" path="res://Scripts/main_app.gd" id="1_q8jyx"]
[ext_resource type="Texture2D" uid="uid://ct0wosntsnn88" path="res://Scenes/Main/images/search.png" id="2_oy3xc"]
[ext_resource type="Texture2D" uid="uid://nycnc5i6w4fu" path="res://Scenes/Main/images/books.png" id="3_6xhhc"]
[ext_resource type="Texture2D" uid="uid://cupnhyv34rr0u" path="res://Scenes/Main/images/Games.png" id="4_561kl"]
[ext_resource type="Texture2D" uid="uid://c237jmc4cvvw1" path="res://Scenes/Main/images/Series.png" id="5_jduf5"]
[ext_resource type="Texture2D" uid="uid://cmpvlob3owp5g" path="res://Scenes/Main/images/Films.png" id="6_7qji7"]
[ext_resource type="Texture2D" uid="uid://cdpr2oeux0q1m" path="res://Scenes/Main/images/Social.png" id="7_na8jn"]
[ext_resource type="Texture2D" uid="uid://b06o1t624llm2" path="res://Scenes/Main/images/profile.png" id="8_iu3bl"]
[ext_resource type="Texture2D" uid="uid://bowklt4otdwqs" path="res://Scenes/Main/images/hamburguer.png" id="9_561kl"]

[node name="Main" type="Control" unique_id=1200556173]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_q8jyx")

[node name="BackGroundColor" type="ColorRect" parent="." unique_id=363418273]
layout_mode = 0
offset_left = -12.0
offset_right = 1155.0
offset_bottom = 650.0

[node name="ViewContainer" type="HBoxContainer" parent="." unique_id=619890960]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SideMenu" type="Control" parent="ViewContainer" unique_id=912905036]
layout_mode = 2

[node name="MenuColor" type="ColorRect" parent="ViewContainer/SideMenu" unique_id=354401761]
layout_mode = 0
offset_right = 294.0
offset_bottom = 651.0
color = Color(0.52906674, 0.5290667, 0.5290667, 1)

[node name="ButtonContainer" type="MarginContainer" parent="ViewContainer/SideMenu/MenuColor" unique_id=2018622746]
layout_mode = 0
offset_right = 291.0
offset_bottom = 650.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 120
theme_override_constants/margin_right = 20

[node name="VBoxContainer" type="VBoxContainer" parent="ViewContainer/SideMenu/MenuColor/ButtonContainer" unique_id=563033661]
layout_mode = 2
theme_override_constants/separation = 35

[node name="Search" type="Button" parent="ViewContainer/SideMenu/MenuColor/ButtonContainer/VBoxContainer" unique_id=1894491895]
layout_mode = 2
theme_override_constants/icon_max_width = 30
text = "Search"
icon = ExtResource("2_oy3xc")

[node name="Books" type="Button" parent="ViewContainer/SideMenu/MenuColor/ButtonContainer/VBoxContainer" unique_id=1606267422]
layout_mode = 2
theme_override_constants/icon_max_width = 30
text = "Books
"
icon = ExtResource("3_6xhhc")

[node name="Games" type="Button" parent="ViewContainer/SideMenu/MenuColor/ButtonContainer/VBoxContainer" unique_id=435816582]
layout_mode = 2
theme_override_constants/icon_max_width = 30
text = "Games"
icon = ExtResource("4_561kl")

[node name="Series" type="Button" parent="ViewContainer/SideMenu/MenuColor/ButtonContainer/VBoxContainer" unique_id=1116327487]
layout_mode = 2
theme_override_constants/icon_max_width = 30
text = "Series"
icon = ExtResource("5_jduf5")

[node name="Films" type="Button" parent="ViewContainer/SideMenu/MenuColor/ButtonContainer/VBoxContainer" unique_id=954329832]
layout_mode = 2
theme_override_constants/icon_max_width = 30
text = "Films"
icon = ExtResource("6_7qji7")

[node name="Social" type="Button" parent="ViewContainer/SideMenu/MenuColor/ButtonContainer/VBoxContainer" unique_id=389034007]
layout_mode = 2
theme_override_constants/icon_max_width = 30
text = "Social"
icon = ExtResource("7_na8jn")

[node name="Profile" type="Button" parent="ViewContainer/SideMenu/MenuColor/ButtonContainer/VBoxContainer" unique_id=1213749291]
layout_mode = 2
theme_override_constants/icon_max_width = 30
text = "Profile"
icon = ExtResource("8_iu3bl")

[node name="MenuSpacer" type="Control" parent="ViewContainer" unique_id=507063341]
layout_mode = 2

[node name="ContentArea" type="Control" parent="ViewContainer" unique_id=416845705]
layout_mode = 2
size_flags_horizontal = 3

[node name="Menu" type="Button" parent="." unique_id=451335143]
layout_mode = 1
offset_left = 21.0
offset_top = 23.0
offset_right = 66.0
offset_bottom = 68.0
theme_override_constants/icon_max_width = 40
icon = ExtResource("9_561kl")

[connection signal="pressed" from="ViewContainer/SideMenu/MenuColor/ButtonContainer/VBoxContainer/Search" to="." method="_on_search_pressed"]
[connection signal="pressed" from="ViewContainer/SideMenu/MenuColor/ButtonContainer/VBoxContainer/Profile" to="." method="_on_profile_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_hamburguesa_pressed"]
